# intab

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_app.py  test_auth_headers.py  test_forgot_password.py  url_upload_references.txt  verify_auth.py
frontend/web/: chords.html  fretboard.html  index.html  login.html  quiz.html  register.html  sidenav.html  tablature.html
frontend/web/css/: app-header.css  chords.css  fretboard.css  history.css  index.css  login.css  quiz.css  register.css  sidenav.css  tablature.css
frontend/web/js/: history.js  quiz.js  search.js
frontend/web/templates/: chords.html  forgot_password.html  fretboard.html  history.html  index.html  login.html  quiz.html  register.html  reset_password.html  search.html  sidenav.html  tablature.html
patches/: fix_torchaudio_save.py
src/: app.py  main.py
src/api/: dependencies.py
src/api/routes/: audio.py  auth.py  chords.py  quiz.py  upload.py  (+1 more)
src/auth/: jwt_utils.py  user.py
src/chords/: chords.py
src/core/: config.py  minio_client.py  s3_client.py
src/db/: audio_model.py  chord_model.py  connection.py  models.py  setup.py  tablature_model.py
src/filter/: auth_filter.py
src/fretboard/: chord_classifier.py  fretboard_api.py  integration.py
src/quiz/: build_chord_library.py  chord_library.py  quiz_service.py
src/schemas/: user.py
src/tablature/: model_utils.py  service.py  upload_service.py  visualization.py
src/util/: email.py  sessionHandler.py
test/: test_api.py  test_chords_db.py  test_trim.py
(+3 files in other folders)
