[project]
name = "fyp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.54",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.128.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "psycopg2>=2.9.11",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.46",
    "supabase>=2.27.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "typing>=3.10.0.0",
    "uvicorn>=0.40.0",
    "werkzeug>=3.1.5",
]
